@@ -64,7 +64,6 @@ LIBRESSL_VERSION_NUMBER
 # Things WAF sets that don't get #undefs if they're not set
 ENABLE_EARLY_DROPROOT
 ENABLE_LEAP_SMEAR
-ENABLE_LOCKCLOCK
 ENABLE_MSSNTP
 ENABLE_LEAP_TESTING
 HAVE_LINUX_CAPABILITY
