@@ -52,7 +52,8 @@ No +filegen clockstats+ monitor data are produced by this driver.
   Specifies the driver reference identifier, an ASCII string from one to
   four characters, with default +LOCL+.
 +flag1 {0 | 1}+::
-  Not used by this driver.
+  If flag1 is 1, set NIST lockclock mode.  In this mode, ntpd assumes
+  the system clock is externally disctplined and disables frequency adjustment.
 +flag2 {0 | 1}+::
   Not used by this driver.
 +flag3 {0 | 1}+::
