@@ -10,6 +10,11 @@ Much of the traditional function of a news file is now better addressed
 by browsing the comments in the revision history.  This file will focus
 on user-visible changes.
 
+== Repository head ==
+
+NIST lockclock mode is now a runtime option set by the (previously unused)
+flag1 mode bit of the local-clock driver.
+
 == 2019-01-13: 1.1.3 ==
 
 Lots of typo fixes, documentation cleanups, test targets.
